	- Prevented Load of XML-RPC library if xml_rpc isn't enabled
	- Correctly deleted the session when deleting a user
	- Added Search Bar to main page (Thx sigger)
	- Added British English (Thx ??? <I need to look it up>)
	- Added optional automatic resizing of thumbnails using php-gd
	- Improved Upload System (Thx Rosensama)
	- Added Download Selected Option if Zip Downloads are allowed


--------------------------------------------------------------------------
  v.3.3.2-Alpha1 07/11/2005:
  	- Added Spanish Translation (Thx ros)
	- Fixed Menu Highlight when using a Translation
	- More HTML cleanup (Thx Xgizzmo)
	- Added inital Browse Pages and Supporting Functions
	- Added Genre Stats Tracking
	- Moved files into more logical areas, added .lib and .class
		suffix to library and class files, also started using 
		phpdoc style documentation
	- Added Improved MPD interface (Thx Sigger)
	- Updated XMLRPC lib to 1.1.1 due to security issues with previous
		versions 
	- Updated Getid3() library to 1.7.4
	- Added code to streaming that requires you to play at least half
		the song before it's counted in the stats (Thx SH)
	- Added Norwegian translation (Thx Ruudboy)
	- Added a clean_catalog() to the /bin/catalog_update.php.inc script
	- Removed all instances of $user->id
	- Improved XMLRPC client and server functions, no longer attempts
		to pull all songs at once, pulls in 500 song chunks
	- Added tables/fields for Dynamic Playlists and IP tracking
	- Fixed some spelling errors
	- Added remote session validation for XMLRPC streaming

--------------------------------------------------------------------------
  v.3.3.1 06/21/2005:
  	- Fixed hardcoded HTTP reference in list_header.inc 
		(Thx hongyi_gao)
	- Fixed refresh javascript for main page.
	- Fixed <html lang=> tag so that it validates (Thx XGizzmo)
	- Added show_footer_menu() funciton and preference (Thx XGizzmo)
	- Added localplay_menu config option that puts MPD on it's own 